# staticlib_jni

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
docs/html/: annotated.html  classes.html  classstaticlib_1_1jni_1_1error__checker-members.html  classstaticlib_1_1jni_1_1error__checker.html  classstaticlib_1_1jni_1_1java__vm__ptr-members.html  classstaticlib_1_1jni_1_1java__vm__ptr.html  classstaticlib_1_1jni_1_1jclass__ptr-members.html  classstaticlib_1_1jni_1_1jclass__ptr.html  classstaticlib_1_1jni_1_1jni__exception-members.html  classstaticlib_1_1jni_1_1jni__exception.html  classstaticlib_1_1jni_1_1jobject__ptr-members.html  classstaticlib_1_1jni_1_1jobject__ptr.html  classstaticlib_1_1jni_1_1thread__local__jni__env__ptr-members.html  classstaticlib_1_1jni_1_1thread__local__jni__env__ptr.html  dir_5029a31c5824979e64a182ba2778a201.html  dir_c33d3ca81783b96de1fd366e75cb14d0.html  error__checker_8hpp.html  error__checker_8hpp_source.html  files.html  functions.html  functions_0x62.html  functions_0x63.html  functions_0x64.html  functions_0x65.html  functions_0x66.html  functions_0x67.html  functions_0x69.html  functions_0x6a.html  functions_0x6c.html  functions_0x6d.html  functions_0x6e.html  functions_0x6f.html  functions_0x70.html  functions_0x72.html  functions_0x73.html  functions_0x74.html  functions_0x75.html  functions_0x76.html  functions_0x7a.html  functions_func.html  (+73 more)
docs/html/search/: all_61.js  all_63.js  all_64.js  all_65.js  all_67.js  all_69.js  all_6a.js  all_6c.js  all_6d.js  all_6e.js  all_6f.js  all_70.js  all_72.js  all_73.js  all_74.js  all_76.js  classes_5f.js  classes_65.js  classes_6a.js  classes_74.js  defines_6a.js  enums_6a.js  enumvalues_6a.js  files_6a.js  files_74.js  functions_63.js  functions_67.js  functions_69.js  functions_6a.js  functions_6e.js  functions_6f.js  functions_72.js  functions_73.js  functions_74.js  functions_76.js  namespaces_73.js  search.js  typedefs_63.js  typedefs_6a.js  variables_61.js  (+15 more)
include/: jni.h
include/staticlib/: jni.hpp
include/staticlib/jni/: error_checker.hpp  java_vm_ptr.hpp  jclass_ptr.hpp  jni_exception.hpp  jobject_ptr.hpp  thread_local_jni_env_ptr.hpp
test/: CMakeLists.txt  JniTest.h  JniTest.java  error_checker_test.hpp  java_vm_ptr_test.hpp  jclass_ptr_test.hpp  jni_test.cpp  jobject_ptr_test.hpp  thread_local_jni_env_ptr_test.hpp
